# tssv

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  README.rst  WikiStart  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml  release.yml  test.yml
data/: library.csv  library_lite.csv  m1_newalleles.csv  test.fa  test.fq
doc/: benchmark.md  paired-end.md
doc/website/: TSSV
docs/: .readthedocs.yaml  CONTRIBUTING.md  benchmark.rst  conf.py  credits.rst  index.rst  installation.rst  usage.rst
extras/annotate/: annotate.py
extras/benchmark/: Makefile  benchmark.c
src/: FLDO_library_simple.txt  FLDO_tool.pl  FLDO_tool.py  README  amplicon.py  sg_align.py  splitFasta.py  tssv.py
src/data/: library.csv  test.fa
tests/: Makefile  test_align.py  test_annotate.py  test_sgAlign.cc  test_sgAlignSSE.cc  test_sg_align.cc  test_tssv.py
tssv/: Makefile  __init__.py  align_pair.py  annotate.py  cli.py  debug.c  sgAlign.c  sgAlign.h  sgAlignSSE.c  sgAlignSSE.h  sgAlignWrapper.c  sg_align.c  sg_align.h  sg_align.i  sg_align.py  sg_align_i.c  tssv.py  tssv_light.py  tssv_lite.py
