[metadata]
name = tssv
version = 1.0.3
description = Targeted characterisation of short structural variation.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://git.lumc.nl/j.f.j.laros/tssv
keywords = bioinformatics
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering
copyright = 2010-2018

[options]
packages = tssv, tssv_extras
package_dir =
    tssv = tssv
    tssv_extras = extras/annotate
install_requires =
    biopython==1.72
    configparser==3.5.0
    fastools==1.0.1
    python-Levenshtein==0.12.0
    requests==2.19.1
tests_require =
    fake-open==0.0.1
    pytest==4.0.1

[options.package_data]
tssv =
    setup.cfg
    sgAlign.h
    sgAlignSSE.h

[options.entry_points]
console_scripts =
    tssv = tssv.cli:main
    tannotate = tssv_extras.annotate:main
